# web2img_deltabot

./: README.md  pylama.ini  pyproject.toml
web2img_deltabot/: __init__.py  hooks.py  orm.py  utils.py
