[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.1"
name = "web2img-deltabot"
description = "Delta Chat bot to take website screenshots"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["deltachat", "bot"]
authors = [
  {name = "adbenitez", email = "adbenitez@hispanilandia.net"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "SQLAlchemy>=2.0.22",
    "playwright>=1.28.0",
    "deltabot-cli>=0.1.0",
    "deltachat-rpc-server>=1.127.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "isort",
  "pylint",
  "pylama",
  "pytest",
]

[project.scripts]
web2img-bot = "web2img_deltabot:main"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
